--- a/app/src/main/res/layout/activity_thay_doi_mat_khau.xml
+++ b/app/src/main/res/layout/activity_thay_doi_mat_khau.xml
@@ -49,10 +49,12 @@
         android:id="@+id/editTextMKCuTT"
         android:layout_width="0dp"
         android:layout_height="45dp"
-        android:background="@drawable/custom_input"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_lock_icon"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Mật khẩu cũ"
         android:inputType="textPassword"
@@ -75,16 +77,20 @@
 
     <EditText
         android:id="@+id/editTextMKMoiTT"
+
         android:layout_width="0dp"
         android:layout_height="45dp"
-        android:background="@drawable/custom_input"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_lock_icon"
+        android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Mật khẩu mới"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextMKCuTT" />
 
@@ -110,6 +116,8 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="Nhập lại mật khẩu"
+        android:drawableStart="@drawable/custom_lock_icon"
+        android:drawablePadding="10dp"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
