--- a/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
+++ b/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:gravity="center_horizontal"
                 android:text="Thay đổi thông tin Tài khoản"
                 android:textColor="#F44336"
@@ -44,7 +44,7 @@
                 android:inputType="textEmailAddress"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
                 android:hint="Số điện thoại"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -90,8 +90,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/editTextSDTTT" />
 
             <ImageButton
-                android:id="@+id/imgHidePassDN"
-                android:layout_width="wrap_content"
+                android:id="@+id/imgButtonDate"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/editTextDateTT"
                 android:layout_alignRight="@+id/editTextDateTT"
@@ -110,6 +110,7 @@
                 android:layout_marginEnd="70dp"
                 android:background="@drawable/custom_button"
                 android:text="Thoát"
+                android:onClick="Thoat"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spinnerXaPhuong" />
@@ -181,7 +182,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="38dp"
                 android:text="Quận/Huyện"
                 android:textColor="@color/black"
                 android:textSize="18sp"
@@ -198,6 +199,7 @@
                 android:layout_marginTop="40dp"
                 android:background="@drawable/custom_button"
                 android:text="Lưu"
+
                 android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spinnerXaPhuong" />
