--- a/app/src/main/res/layout/fragment_dangnhap.xml
+++ b/app/src/main/res/layout/fragment_dangnhap.xml
@@ -78,7 +78,7 @@
                     />
 
                     <ImageButton
-                        android:id="@+id/imgHidePassDN"
+                        android:id="@+id/imgButtonDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@+id/txtPassDN"
