--- a/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
+++ b/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
@@ -36,10 +36,12 @@
                     android:id="@+id/txtHoVaTenTT"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
+                    android:layout_marginEnd="16dp"
+
                     android:gravity="center|center_vertical"
                     android:text="Họ Và Tên"
-
                     android:textColor="#F44336"
                     android:textSize="24sp"
                     android:textStyle="bold|italic"
@@ -50,36 +52,36 @@
 
                 <TextView
                     android:id="@+id/textView3"
-                    android:layout_width="110dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="33dp"
                     android:text="Email"
                     android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView4"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.053"
+                    app:layout_constraintHorizontal_bias="0.043"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
 
                 <TextView
                     android:id="@+id/textView4"
-                    android:layout_width="0dp"
-                    android:layout_height="25dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="28dp"
                     android:text="Số điện thoại"
                     android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@+id/textView3"
+                    app:layout_constraintEnd_toStartOf="@+id/txtSDTTT"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/textView3"
                     app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
                 <TextView
                     android:id="@+id/textView5"
-                    android:layout_width="0dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="28dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="29dp"
                     android:text="Ngày sinh"
                     android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
@@ -90,9 +92,9 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="0dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="28dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="31dp"
                     android:text="Địa chỉ"
                     android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
@@ -105,7 +107,7 @@
                     android:id="@+id/txtEmailTT"
                     android:layout_width="0dp"
                     android:layout_height="35sp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="70dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
                     android:gravity="center_vertical"
