--- a/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
+++ b/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
@@ -21,8 +21,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-                <ImageView
+                <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/imgHinhDaiDienTT1"
                     android:layout_width="150dp"
                     android:layout_height="165dp"
@@ -30,7 +29,13 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/admin" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/admin"
+                    app:layout_goneMarginTop="40dp"
+                    app:riv_corner_radius="20dp">
+
+                </com.makeramen.roundedimageview.RoundedImageView>
+
 
                 <TextView
                     android:id="@+id/txtHoVaTenTT"
@@ -58,6 +63,7 @@
                     android:text="Email"
                     android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/textView4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.043"
@@ -72,6 +78,7 @@
                     android:text="Số điện thoại"
                     android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/txtSDTTT"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -85,6 +92,7 @@
                     android:text="Ngày sinh"
                     android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/textView4"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -98,6 +106,7 @@
                     android:text="Địa chỉ"
                     android:textColor="@color/cardview_dark_background"
                     android:textSize="16sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/textView5"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -112,7 +121,6 @@
                     android:layout_marginEnd="16dp"
                     android:gravity="center_vertical"
                     android:textSize="16sp"
-                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
                     app:layout_constraintTop_toBottomOf="@+id/txtHoVaTenTT" />
@@ -124,7 +132,6 @@
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
                     android:textSize="16sp"
-                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/txtEmailTT"
                     app:layout_constraintStart_toStartOf="@+id/txtEmailTT"
                     app:layout_constraintTop_toBottomOf="@+id/txtEmailTT" />
@@ -136,7 +143,6 @@
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
                     android:textSize="16sp"
-                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/txtSDTTT"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/txtSDTTT"
@@ -149,7 +155,6 @@
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
                     android:textSize="16sp"
-                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/txtNgaySinhTT"
                     app:layout_constraintStart_toStartOf="@+id/txtNgaySinhTT"
                     app:layout_constraintTop_toBottomOf="@+id/txtNgaySinhTT" />
@@ -179,13 +184,14 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/custom_button"
-                    android:textColor="@color/white"
                     android:text="Thay Đổi Mật Khẩu"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btnThayDoiTT"
                     tools:ignore="OnClick" />
+
                 <Button
                     android:id="@+id/btnDangXuat"
                     android:layout_width="0dp"
@@ -194,8 +200,8 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/custom_button"
-                    android:textColor="@color/white"
                     android:text="Đăng xuất"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
