--- a/app/src/main/res/layout/activity_thay_doi_mat_khau.xml
+++ b/app/src/main/res/layout/activity_thay_doi_mat_khau.xml
@@ -7,7 +7,7 @@
     tools:context=".packageDangKyDangNhap.packageDangNhap.packageThongTinUser.ThayDoiMatKhau">
 
     <Button
-        android:id="@+id/btnLuuTT"
+        android:id="@+id/btnTiepTheoXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextNLMKTT" />
 
     <Button
-        android:id="@+id/btnThoatTT"
+        android:id="@+id/btnThoatXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -39,7 +39,7 @@
         android:layout_marginTop="150dp"
         android:text="Đổi Mật khẩu"
         android:textColor="#F44336"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
