--- a/app/src/main/res/layout/activity_thong_tin_giao_dich.xml
+++ b/app/src/main/res/layout/activity_thong_tin_giao_dich.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".packageTrangChiTiet.packageThanhToan.ThongTinVe">
+    tools:context=".packageTrangChiTiet.packageThanhToan.ThongTinGiaoDich">
 
     <TextView
         android:id="@+id/textView11"
@@ -216,4 +216,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView32"
         app:layout_constraintVertical_bias="0.526" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
