--- a/app/src/main/res/layout/activity_so_do_ghe.xml
+++ b/app/src/main/res/layout/activity_so_do_ghe.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/txtTenPhim"
-        android:layout_width="239dp"
-        android:layout_height="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:text="One Piece: Đại Hội Hải Tặc"
         android:textColor="#121111"
