--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -7,27 +7,29 @@
     android:backgroundTint="#C24FCF">
 
     <ImageView
-        android:id="@+id/imgHinh"
+        android:id="@+id/imgHinhThanhToan"
         android:layout_width="135dp"
         android:layout_height="184dp"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/a2" />
 
     <TextView
         android:id="@+id/txtTenPhim"
-        android:layout_width="194dp"
-        android:layout_height="34dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginTop="4dp"
         android:drawableTint="@color/black"
+        android:inputType="textMultiLine"
         android:textColor="#232222"
         android:textColorLink="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imgHinh"
+        app:layout_constraintStart_toEndOf="@+id/imgHinhThanhToan"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -42,7 +44,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imgHinh"
+        app:layout_constraintStart_toEndOf="@+id/imgHinhThanhToan"
         app:layout_constraintTop_toBottomOf="@+id/txtTenPhim" />
 
     <TextView
@@ -56,7 +58,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imgHinh"
+        app:layout_constraintStart_toEndOf="@+id/imgHinhThanhToan"
         app:layout_constraintTop_toBottomOf="@+id/txtChuY" />
 
     <TextView
@@ -70,7 +72,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imgHinh"
+        app:layout_constraintStart_toEndOf="@+id/imgHinhThanhToan"
         app:layout_constraintTop_toBottomOf="@+id/txtNgay" />
 
     <TextView
@@ -84,7 +86,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imgHinh"
+        app:layout_constraintStart_toEndOf="@+id/imgHinhThanhToan"
         app:layout_constraintTop_toBottomOf="@+id/txtGio" />
 
     <TextView
@@ -97,14 +99,14 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imgHinh"
+        app:layout_constraintStart_toEndOf="@+id/imgHinhThanhToan"
         app:layout_constraintTop_toBottomOf="@+id/txtDiaDiem" />
 
     <TextView
         android:id="@+id/TextView"
         android:layout_width="102dp"
         android:layout_height="27dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="156dp"
         android:drawableTint="#F40F0F"
         android:text="Số lượng: "
@@ -113,8 +115,9 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/txtSoluong"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgHinh" />
+        app:layout_constraintTop_toBottomOf="@+id/imgHinhThanhToan" />
 
     <TextView
         android:id="@+id/textView22"
@@ -162,7 +165,7 @@
         android:id="@+id/textView18"
         android:layout_width="350dp"
         android:layout_height="54dp"
-        android:layout_marginTop="292dp"
+        android:layout_marginTop="82dp"
         android:background="#DFC8C8"
         android:gravity="center"
         android:text="GIẢM GIÁ"
@@ -170,8 +173,9 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
     <TextView
         android:id="@+id/txtCoupon"
@@ -196,7 +200,9 @@
         android:id="@+id/txtVip"
         android:layout_width="350dp"
         android:layout_height="54dp"
+        android:layout_marginBottom="37dp"
         android:text="VIP"
+        app:layout_constraintBottom_toTopOf="@+id/btnThanhToan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDiem" />
@@ -214,6 +220,7 @@
         android:id="@+id/btnThanhToan"
         android:layout_width="360dp"
         android:layout_height="47dp"
+        android:layout_marginBottom="16dp"
         android:background="#F8F5F8"
         android:backgroundTint="#F10A0A"
         android:text="THANH TOÁN"
@@ -222,7 +229,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtVip" />
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
