--- a/app/src/main/res/layout/activity_thong_tin_giao_dich.xml
+++ b/app/src/main/res/layout/activity_thong_tin_giao_dich.xml
@@ -214,7 +214,6 @@
         android:text="THAY ĐỔI"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView32"
-        app:layout_constraintVertical_bias="0.526" />
+        app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
