Chỉnh sửa Insert Vé

--- a/app/src/main/res/layout/activity_lich_chieu_phim.xml
+++ b/app/src/main/res/layout/activity_lich_chieu_phim.xml
@@ -35,6 +35,8 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/edit_text_border"
                         android:ems="10"
+                        android:focusable="false"
+
                         android:inputType="textPersonName"
                         android:padding="2dp"
                         android:text="Name"
