--- a/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
+++ b/app/src/main/res/layout/activity_thay_doi_thong_tin.xml
@@ -226,9 +226,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
-                android:text="Đổi"
-                android:textColor="@color/white"
-                android:background="@drawable/custom_button"
+                android:background="@android:drawable/ic_menu_upload"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.412"
                 app:layout_constraintStart_toEndOf="@+id/imageViewDoiAnh"
