--- a/app/src/main/res/color/button_background.xml
+++ b/app/src/main/res/color/button_background.xml
@@ -2,5 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
         <item android:state_selected="true" android:color="#E8D109"></item>
 
-    <item android:color="#F8F2F2"></item>
+        <item android:state_selected="false" android:color="#F8F2F2"></item>
+
+        <item android:state_enabled="true" android:color="#0BE13B"></item>
+
+
 </selector>
